One more attempt to fix double-tap-to-zoom on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-body {
+* {
   /* disable double-tap to zoom */
-  touch-action: manipulate;
+  touch-action: manipulation;
 }
